# opentwig

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  test.yml
docs/: compat.md  cookbook.md  index.md  install.md  quickstart.md  recreate.md  reference.md  songs.md
docs/tutorials/: algorithmic.md  render.md  sidechain.md
examples/: demo_clips.py  demo_dnb.py  demo_modulators.py  demo_sidechain.py  nightdrive.py  nightdrive_recreated.py  project_clear.py  verify_sidechain.py
src/openwig/: __init__.py  __main__.py  arrangement.py  bridge.py  curves.py  diagnostics.py  export.py  lint.py  live.py  notes.py  recreate.py  song.py
src/openwig/cli/: __init__.py  __main__.py  install.py
src/openwig/controller/: __init__.py  openwig_bridge.control.js  symbols_default.json
src/openwig/read/: __init__.py  notes.py  project.py
src/openwig/wire/: __init__.py  automation.py  render.py
tests/: conftest.py  live_smoke.py  live_smoke2.py  live_smoke3.py  test_api.py  test_autoadapt_live.py  test_bridge.py  test_controller_syntax.py  test_diagnostics.py  test_portability.py  test_recreate.py
